Update layer highlight style in index.html

--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@ function selectByCode(codeRaw){
   }
 
   // Apply new highlight
-  lyr.setStyle({ weight: 3, color: '#fff', dashArray: '2,3' });
+  lyr.setStyle({ weight: 3, color: '#fffa90',
+  dashArray: '4,2' });
   selectedLayer = lyr;
 
   // Save selection for sidebar refresh + search
