--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@ function selectByCode(codeRaw){
   }
 
   // Apply new highlight
-  lyr.setStyle({ weight: 3, color: '#fffa90',
-  dashArray: '4,2' });
+ found.setStyle({ weight: 3, color: '#fff', dashArray: '2,3' });
   selectedLayer = lyr;
 
   // Save selection for sidebar refresh + search
