--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ function selectByCode(codeRaw){
   }
 
   // Apply new highlight
- found.setStyle({ weight: 3, color: '#fff', dashArray: '2,3' });
+  lyr.setStyle({ weight: 3, color: '#fff', dashArray: '2,3' });
   selectedLayer = lyr;
 
   // Save selection for sidebar refresh + search
@@ -305,6 +305,7 @@ function selectByCode(codeRaw){
   // Try to open tooltip (non-fatal)
   try { if (lyr.getTooltip && lyr.getTooltip()) lyr.openTooltip(); } catch {}
 }
+
 
   // --- UI pieces
   const slidersDiv = document.getElementById('sliders');
