--- a/index.html
+++ b/index.html
@@ -17,9 +17,43 @@
     :root { --bg:#0b0f19; --panel:#212F47; --text:#e8ecf3; --muted:#c3ccda; --accent:#4f8cff; --border:#2f3e5b; }
     html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
     #app{display:grid;grid-template-columns:360px 1fr;grid-template-rows:auto 1fr;height:100%}
-    header{grid-column:1/-1;padding:10px 16px;border-bottom:1px solid var(--border);background:var(--panel);display:flex;align-items:center;gap:12px}
-    header h1{margin:0;font-weight:800;font-size:20px;letter-spacing:.4px;text-transform:uppercase}
-    .sub{color:var(--muted);font-size:12px}
+   header {
+  grid-column: 1 / -1;
+  padding: 10px 16px;
+  border-bottom: 1px solid var(--border);
+  background: var(--panel);
+}
+
+/* new wrapper inside header */
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+/* existing heading & subtext */
+header h1 {
+  margin: 0;
+  font-weight: 800;
+  font-size: 20px;
+  letter-spacing: .4px;
+  text-transform: uppercase;
+}
+
+.sub {
+  color: var(--muted);
+  font-size: 12px;
+}
+
+/* logo styling */
+.brand .logo {
+  width: 40px;          /* adjust size */
+  height: 40px;
+  border-radius: 50%;   /* optional – remove if square logo */
+  object-fit: cover;
+  border: 2px solid rgba(255,255,255,.08);
+}
+
     aside{border-right:1px solid var(--border);background:var(--panel);padding:14px;overflow:auto}
     main{position:relative}
     #map{height:100%;width:100%;min-height:400px}
@@ -40,11 +74,14 @@
 <body>
 <div id="app">
   <header>
+  <div class="brand">
+    <img class="logo" src="/data/logo.png" alt="New Horizon Economics logo" />
     <div>
       <h1>New Horizon Economics | IMD 2025 — Re-weightable (LSOA/MSOA)</h1>
       <div class="sub">Interactive choropleth · File 9 domains · slider-weighted composite</div>
     </div>
-  </header>
+  </div>
+</header>
 
   <aside>
     <div class="group">
