--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ header h1 {
   <div class="brand">
     <img class="logo" src="/data/logo.png" alt="New Horizon Economics logo" />
     <div>
-      <h1>New Horizon Economics | IMD 2025 — Re-weightable (LSOA/MSOA)</h1>
-      <div class="sub">Interactive choropleth · File 9 domains · slider-weighted composite</div>
+      <h1>New Horizon Economics | Index of Multiple Dep[rivation 2025</h1>
+      <div class="sub">REWEIGHTABLE IMD DIMENSIONS</div>
     </div>
   </div>
 </header>
