--- a/index.html
+++ b/index.html
@@ -69,19 +69,6 @@ header h1 {
     .btns{display:flex;gap:8px}
     .outline{background:transparent;border-color:#b3ceee;color:#b3ceee}
     @media(max-width:900px){#app{grid-template-columns:1fr}#map{height:60vh}}
-  </style>
-</head>
-<body>
-<div id="app">
-  <header>
-  <div class="brand">
-    <img class="logo" src="/data/logo.png" alt="New Horizon Economics logo" />
-    <div>
-      <h1>New Horizon Economics | Index of Multiple Dep[rivation 2025</h1>
-      <div class="sub">REWEIGHTABLE IMD DIMENSIONS</div>
-    </div>
-  </div>
-</header>
   /* Mobile: make the top band clearly scrollable */
 @media (max-width: 900px) {
   aside {
@@ -135,6 +122,20 @@ header h1 {
   aside.scrolled::before   { display: block; }
   aside.hint-hidden .scroll-hint { display: none; }
 }
+
+  </style>
+</head>
+<body>
+<div id="app">
+  <header>
+  <div class="brand">
+    <img class="logo" src="/data/logo.png" alt="New Horizon Economics logo" />
+    <div>
+      <h1>New Horizon Economics | Index of Multiple Deprivation 2025</h1>
+      <div class="sub">REWEIGHTABLE IMD DIMENSIONS</div>
+    </div>
+  </div>
+</header>
   <aside>
     <div class="group">
       <div class="row-inline">
