--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ header h1 {
 
    <div class="group btns">
      <button id="reset">Reset weights</button>
-     <button id="exportCsv" class="outline">Export CSV</button>
+     <button id="exportCsv">Export CSV</button>
  
     </div>
   </aside>
