--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ header h1 {
     <img class="logo" src="/data/logo.png" alt="New Horizon Economics logo" />
     <div>
       <h1>New Horizon Economics | Index of Multiple Deprivation 2025</h1>
-      <div class="sub">REWEIGHTABLE IMD DIMENSIONS FOR LSOA</div>
+      <div class="sub">REWEIGHTABLE IMD DOMAINS FOR LSOA</div>
     </div>
   </div>
 </header>
